--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -53,7 +53,7 @@
 <info-item bindtap='callPhone' info="{{kefuInfo}}"></info-item>
 <!--</button>-->
 
-<navigator wx:if='{{userInfo.type == "0"}}' class='joinBtn' url='/pages/join/message/message' open-type='navigate'>加入合伙人</navigator>
+<navigator wx:if='{{userInfo.type == "0"}}' class='joinBtn' url='/pages/join/message/message' open-type='navigate'><theme-view type="themeFont">加入合伙人</theme-view></navigator>
 
 
 <nav-bottom selected-index='3'></nav-bottom>
