--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,5 +1,5 @@
 /* pages/login/login.wxss */
-
+/* 
 .img {
   width: 356rpx;
   height: 356rpx;
@@ -24,4 +24,32 @@ image {
 
 page{
   background: #fff;
+} */
+.bgImg{
+  width: 100%;
+}
+
+.bgImgs{
+  margin-top: -500rpx;
+}
+page{
+  background: #fff;
+}
+/* pages/accredit/accredit.wxss */
+.logo{
+  margin-top:102rpx;
+  width: 275rpx;
+  display: block;
+  /* margin: 102rpx auto 180rpx auto; */
+}
+.accreditBtn{
+  background: #181818;
+  color: #fff;
+  border-radius:41rpx;
+  padding:7rpx 0rpx;
+  /* height: 68rpx;
+  line-height: 68rpx; */
+  width: 88%;
+  margin:0rpx auto;
+  font-size: 26rpx;
 }
