--- a/pages/user/freeze/freeze.wxml
+++ b/pages/user/freeze/freeze.wxml
@@ -1,7 +1,7 @@
 <!--pages/money/money.wxml-->
 <view class='backBox'>
 <image src='{{bgImg}}'  mode='aspectFill'></image>
-<navigator url='/' open-type='navigate' class='jdgz'>解冻规则</navigator>
+<navigator url='/pages/djmx/djmx' open-type='navigate' class='jdgz'>解冻规则</navigator>
   <view class='textBox'>
     <view class='moneyBox'>
       <view>￥</view>
