--- a/pages/join/paySuccess/paySuccess.wxss
+++ b/pages/join/paySuccess/paySuccess.wxss
@@ -1,12 +1,14 @@
 /* pages/join/paySuccess/paySuccess.wxss */
-.back{
+
+.back {
   height: 246rpx;
   width: 100%;
-  background:rgba(130,76,31,1);
+  background: var(--themeBackC);
   padding-top: 134rpx;
   position: relative;
 }
-.contentBox{
+
+.contentBox {
   margin: auto;
   margin-top: -40rpx;
   color: #fff;
@@ -15,63 +17,70 @@
   align-items: center;
 }
 
-.contentBox .topBox{
+.contentBox .topBox {
   margin-bottom: 40rpx;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(193,166,143,1);
-  line-height:48rpx;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(193, 166, 143, 1);
+  line-height: 48rpx;
 }
-.contentBox .bottomBox{
+
+.contentBox .bottomBox {
   display: flex;
   flex-direction: row;
-  font-size:42rpx;
-font-family:PingFang-SC-Heavy;
-font-weight:800;
-color:rgba(255,255,255,1);
-line-height:52rpx;
-text-shadow:1rpx 2rpx 0px rgba(105,50,3,0.5);
+  font-size: 42rpx;
+  font-family: PingFang-SC-Heavy;
+  font-weight: 800;
+  color: rgba(255, 255, 255, 1);
+  line-height: 52rpx;
+  text-shadow: 1rpx 2rpx 0px rgba(105, 50, 3, 0.5);
 }
-.backLineBox{
+
+.backLineBox {
   position: absolute;
   width: 100%;
   z-index: 0;
   top: 293rpx;
 }
-.backLine{
-  background:rgba(108,65,39,1);
+
+.backLine {
+  background: #000;
+  opacity: 0.1;
   width: 702rpx;
   height: 30rpx;
   border-radius: 50rpx;
-  margin:auto;
+  margin: auto;
 }
-.backBox{
+
+.backBox {
   width: 654rpx;
   height: 436rpx;
   background: #fff;
-  margin:-11rpx auto -11rpx auto;
+  margin: -11rpx auto -11rpx auto;
 }
 
-
-.cardPrice{
+.cardPrice {
   display: flex;
   flex-direction: row;
   align-items: baseline;
 }
-.cardPrice0{
-font-size:32rpx;
-font-family:PingFang-SC-Regular;
-font-weight:400;
-color:rgba(51,51,51,1);
+
+.cardPrice0 {
+  font-size: 32rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(51, 51, 51, 1);
 }
-.cardPrice1{
-font-size:58rpx;
-font-family:HelveticaInserat-Roman-SemiB;
-font-weight: bold;
-color:rgba(51,51,51,1);
+
+.cardPrice1 {
+  font-size: 58rpx;
+  font-family: HelveticaInserat-Roman-SemiB;
+  font-weight: bold;
+  color: rgba(51, 51, 51, 1);
 }
-.backBoxTop{
+
+.backBoxTop {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -79,60 +88,64 @@ color:rgba(51,51,51,1);
   height: 173rpx;
   position: relative;
 }
-.backBoxTopTop{
+
+.backBoxTopTop {
   height: 45rpx;
   position: absolute;
   top: 0;
   width: 100%;
-  background:linear-gradient(0deg,rgba(255,255,255,1),#CFC1B9);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 1), #ddd);
 }
-.backBottom{
+
+.backBottom {
   border-top: 2rpx dashed #ccc;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   padding: 70rpx 57rpx;
 }
-.backBottomItem{
+
+.backBottomItem {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.backBottomItem view:first-child{
-  font-size:26rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(102,102,102,1);
-  line-height:56rpx;
+
+.backBottomItem view:first-child {
+  font-size: 26rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(102, 102, 102, 1);
+  line-height: 56rpx;
 }
 
-.backBottomItem view:last-child{
-  font-size:26rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
-  line-height:56rpx;
+.backBottomItem view:last-child {
+  font-size: 26rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
+  line-height: 56rpx;
   margin-left: 28rpx;
 }
-.footBox{
+
+.footBox {
   position: fixed;
   bottom: 225rpx;
   width: 100%;
 }
 
-
-.btnSpecialBlock{
+.btnSpecialBlock {
   width: auto;
   margin: 0 46rpx;
   background: #fff;
 }
 
-.footBox .info{
-  font-size:24rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(204,204,204,1);
-  line-height:48rpx;
-  margin-top:25rpx;
+.footBox .info {
+  font-size: 24rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(204, 204, 204, 1);
+  line-height: 48rpx;
+  margin-top: 25rpx;
   text-align: center;
 }
