--- a/pages/user/referCenter/referCenter.wxml
+++ b/pages/user/referCenter/referCenter.wxml
@@ -20,7 +20,7 @@
     <view>累计收益 （元）</view>
     <view class='num'>{{userInfo.money.leiji_money}}</view>
     <view>
-      <navigator open-type='navigate' url='/pages/user/incomeInfo/incomeInfo'>
+      <navigator hover-class="none" open-type='navigate' url='/pages/user/incomeInfo/incomeInfo'>
         <theme-view type="themeBack">收益明细</theme-view>
       </navigator>
     </view>
@@ -43,7 +43,7 @@
 
   <view class='otBox'>
 
-    <navigator open-type='navigate' url='{{item.url}}' class='otItem' wx:for='{{otList}}' wx:key="index">
+    <navigator  hover-class="none" open-type='navigate' url='{{item.url}}' class='otItem' wx:for='{{otList}}' wx:key="index">
       <view>{{item.title}}</view>
       <view class='22num'>￥{{item.num}}</view>
       <theme-view type="themeBorder">{{item.btnTitle}}</theme-view>
