--- a/components/loading/loading.wxml
+++ b/components/loading/loading.wxml
@@ -1,4 +1,4 @@
 <!--components/loading.wxml-->
 <view class='mainBox'>
-  <image class='icon' src='/res/icon/ja01.gif'></image>
+  <image mode="widthFix" class='icon' src='/res/icon/ja01.gif'></image>
 </view>
