--- a/pages/user/draw/draw.wxss
+++ b/pages/user/draw/draw.wxss
@@ -1,20 +1,24 @@
 /* pages/user/draw/draw.wxss */
-.titleLeft{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+
+.titleLeft {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
-button{
+
+button {
   padding: 0;
 }
-.titleRight{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(130,76,31,1);
+
+.titleRight {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(130, 76, 31, 1);
 }
-.fucTitle{
+
+.fucTitle {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -23,75 +27,80 @@ button{
   margin-top: 20rpx;
 }
 
-.fucContent{
+.fucContent {
   background: #fff;
 }
-.info{
+
+.info {
   background: #fff;
-  margin-top:1rpx;
-  font-size:20rpx;
-  font-family:PingFang-SC-Regular;
-  font-weight:400;
-  color:rgba(204,0,0,1);
+  margin-top: 1rpx;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(204, 0, 0, 1);
   padding: 32rpx 24rpx;
 }
-.ooooooooo{
+
+.ooooooooo {
   padding: 40rpx 24rpx;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background: #fff;
   margin-top: 20rpx;
-
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
   align-items: center;
 }
 
-
-.Fuccccccbtn{
+.Fuccccccbtn {
   text-align: center;
   line-height: 96rpx;
   margin: 48rpx auto;
-  width:657rpx;
-  height:96rpx;
-  border-radius:48rpx;
-  font-size:32rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(255,255,255,1);
+  width: 657rpx;
+  height: 96rpx;
+  border-radius: 48rpx;
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 1);
 }
-.cardImg{
+
+.cardImg {
   margin: -4rpx;
 }
-.cardImg{
-  width:300rpx;
-  height:115rpx;
-  margin:-25rpx -50rpx -25rpx 0;
 
+.cardTitle {
+  margin-left: 53rpx;
 }
-.cardImg image{
+
+.cardImg {
+  width: 217rpx;
+  height: 115rpx;
+  margin: -25rpx -50rpx -25rpx 0;
+}
+
+.cardImg image {
   width: 100%;
   height: 100%;
 }
 
-
-.cardLeft{
+.cardLeft {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.input{
+.input {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin: 0 20rpx;
 }
 
-.dialogMask{
+.dialogMask {
   position: absolute;
   top: 0;
   width: 100%;
@@ -99,39 +108,40 @@ button{
   background: #000;
   opacity: 0.5;
   z-index: 1;
-
 }
 
-.dialogBack{
+.dialogBack {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
   z-index: 2;
 }
-.dialogBox{
+
+.dialogBox {
   position: relative;
   margin: 338rpx 120rpx;
-  width:508rpx;
-  height:318rpx;
-  background:rgba(255,255,255,1);
-  border-radius:10rpx;
+  width: 508rpx;
+  height: 318rpx;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 10rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.dialogTop{
+
+.dialogTop {
   position: absolute;
   height: 218rpx;
   text-align: center;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(102,102,102,1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(102, 102, 102, 1);
   padding: 85rpx 25rpx;
-
 }
-.dialogBottom{
+
+.dialogBottom {
   position: absolute;
   background: #f6f6f6;
   width: 100%;
@@ -139,9 +149,8 @@ button{
   text-align: center;
   line-height: 100rpx;
   bottom: 0;
-
-  font-size:32rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(130,76,31,1);
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(130, 76, 31, 1);
 }
