--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -20,7 +20,8 @@
   font-weight: 500;
   line-height: 24rpx;
 }
-.typeClass view{
+
+.typeClass view {
   padding: 0rpx 10rpx;
   display: inline;
 }
@@ -51,14 +52,24 @@
   margin: 0 10rpx 0 10rpx;
 }
 
+.iconEdit {
+  width: 32rpx;
+  height: 32rpx;
+}
+
 .iconEdit image {
+  width: 100%;
+  height: 100%;
+}
+
+.iconDel {
   width: 32rpx;
   height: 32rpx;
 }
 
 .iconDel image {
-  width: 32rpx;
-  height: 35rpx;
+  width: 100%;
+  height: 100%;
 }
 
 .addrFoot {
